// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allAssignedPeopleSelector should take the people object and transform it into a single array 1`] = `
Array [
  Object {
    "first_name": "ME in an org",
    "id": "23",
    "type": "person",
  },
  Object {
    "first_name": "Fname1",
    "id": "22",
    "last_name": "Lname1",
    "reverse_contact_assignments": Array [
      Object {
        "assigned_to": Object {
          "id": "23",
          "user": Object {},
        },
      },
    ],
    "type": "person",
  },
  Object {
    "first_name": "Fname1",
    "id": "21",
    "last_name": "Lname2",
    "reverse_contact_assignments": Array [
      Object {
        "assigned_to": Object {
          "id": "23",
          "user": Object {},
        },
      },
    ],
    "type": "person",
  },
  Object {
    "first_name": "Fname2",
    "id": "20",
    "last_name": "Lname",
    "reverse_contact_assignments": Array [
      Object {
        "assigned_to": Object {
          "id": "23",
          "user": Object {},
        },
      },
    ],
    "type": "person",
  },
  Object {
    "first_name": "Fname3",
    "id": "32",
    "last_name": "Lname1",
    "reverse_contact_assignments": Array [
      Object {
        "assigned_to": Object {
          "id": "23",
          "user": Object {},
        },
        "organization": Object {
          "id": "200",
        },
      },
    ],
    "type": "person",
  },
  Object {
    "first_name": "Fname3",
    "id": "30",
    "last_name": "Lname2",
    "reverse_contact_assignments": Array [
      Object {
        "assigned_to": Object {
          "id": "23",
          "user": Object {},
        },
        "organization": Object {
          "id": "100",
        },
      },
    ],
    "type": "person",
  },
  Object {
    "first_name": "Fname3",
    "id": "31",
    "last_name": "Lname3",
    "reverse_contact_assignments": Array [
      Object {
        "assigned_to": Object {
          "id": "23",
          "user": Object {},
        },
        "organization": Object {
          "id": "100",
        },
      },
    ],
    "type": "person",
  },
  Object {
    "first_name": "Fname4",
    "id": "33",
    "reverse_contact_assignments": Array [
      Object {
        "assigned_to": Object {
          "id": "23",
          "user": Object {},
        },
        "organization": Object {
          "id": "150",
        },
      },
    ],
    "type": "person",
  },
]
`;

exports[`contactAssignmentSelector orgId is "personal" should get a contactAssignment for a person that is assigned to the current user's personal ministry 1`] = `
Object {
  "assigned_to": Object {
    "id": "23",
  },
  "organization": null,
}
`;

exports[`contactAssignmentSelector orgId is undefined should get a contactAssignment for a person that is assigned to the current user's personal ministry 1`] = `
Object {
  "assigned_to": Object {
    "id": "23",
  },
  "organization": null,
}
`;

exports[`contactAssignmentSelector orgId passed in should get a contactAssignment for a person that is assigned to the current user's org ministry 1`] = `
Object {
  "assigned_to": Object {
    "id": "23",
  },
  "organization": Object {
    "id": "100",
  },
}
`;

exports[`orgPermissionSelector should get a person's organizationalPermission for the current org | GraphQL 1`] = `
Object {
  "community": Object {
    "id": "200",
  },
  "permission": "owner",
}
`;

exports[`orgPermissionSelector should get a person's organizationalPermission for the current org 1`] = `
Object {
  "organization_id": "200",
}
`;

exports[`personSelector should get a person in the personal org 1`] = `
Object {
  "first_name": "Fname1",
  "id": "22",
  "last_name": "Lname1",
  "reverse_contact_assignments": Array [
    Object {
      "assigned_to": Object {
        "id": "23",
        "user": Object {},
      },
    },
  ],
  "type": "person",
}
`;
